# akademy-party

./: CHANGELOG.md  README.md  pyproject.toml
trytond/modules/akademy_party/: README.md  party.xml
