[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "akademy_party"
version = "1.0"
description = "O SAGE Education é um projeto livre e gratuito para educadores, instituições de ensino e governos."
authors = [
    { name = "Zacarias Juliano Capingala", email = "zacariasjuliano@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GPL-3.0-or-later" }
dependencies = [
    "psycopg2-binary>=2.9.11",
    "pycountry>=24.6.1",
    "trytond==6.8.17",
    "trytond-country==6.8",
    "trytond-party==6.8"
]

[project.urls]
Homepage = "https://comunidadedosaber.ao"
Documentation = "https://docs.comunidadedosaber.ao"
Demo = "https://sage.comunidadedosaber.ao"
Repository = "https://github.com/comunidadedosaber/akademy-party"
"Bug Tracker" = "https://github.com/comunidadedosaber/akademy-party/issues"

[tool.hatch.build]
exclude = ["dist"]

[tool.hatch.build.targets.wheel]
packages = ["trytond"]
